# cpp-unit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docs.css  simple-cpp-unit.pc.in
api/: Double.hpp  Float.hpp  Integer.hpp  LongDouble.hpp  LongInt.hpp  Object.hpp  ShortInt.hpp  SignedChar.hpp  UnsignedInt.hpp  primitive_type_all.hpp  test  test.hpp  test1.hpp
docs/: index.html
src/: CMakeLists.txt  FileFormat.cpp  FileFormat.hpp  Main.cpp  TestMethod.cpp  TestMethod.hpp  TestSuite.cpp  TestSuite.hpp  a.out  compiler.cpp  compiler.hpp  main.cpp  main1.cpp  pp_helper.hpp  pp_helpers.hpp  preprocessor.cpp  preprocessor.hpp  test.cpp  test1.cpp  utils.cpp  utils.hpp
src/cli_tools/: CMakeLists.txt  Terminal.cpp  Terminal.hpp  Tester.cpp  Tree.cpp  Tree.hpp
src/command_line/: CMakeLists.txt  CommandLine.cpp  FunctionCaller.cpp  FunctionCaller.hpp
src/primitive_types/: Bool.hpp  Double.hpp  Integer.cpp  Integer.hpp  LongLongInt.hpp  Object.cpp  Object.hpp  UnsignedChar.hpp  UnsignedLongInt.hpp  UnsignedLongLongInt.hpp  UnsignedShortInt.hpp  WChar.hpp
src/so_dll_file_execute/: CMakeLists.txt  SharedLibrary.cpp  SharedLibrary.hpp
src/test_method/: CMakeLists.txt  TestMethod.hpp
src/test_suite/: CMakeLists.txt  TestSuite.cpp  TestSuite.hpp
src/unit_build/: CMakeLists.txt  Main.cpp
src/unit_build/command_line/: CMakeLists.txt  CommandLine.hpp  FunctionCaller.cpp
src/unit_build/macros/: Macros.hpp  pp_helpers.hpp
src/unit_build/test_method/: CMakeLists.txt  TestMethod.cpp
src/unit_build/test_suite/: CMakeLists.txt
src/unit_build/utils/: CMakeLists.txt  utils.cpp
src/unit_execute/: CMakeLists.txt
src/utils/: CMakeLists.txt  ProcessHandler.cpp  ProcessHandler.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  Main.cpp
utils/: Main.cpp  create_operators.cpp  create_ops  create_primitives.sh  get_headers.sh
