cmake_minimum_required (VERSION 3.13)
project (simple-cpp-unit LANGUAGES CXX)

# Adding sources macros
macro (add_test_sources)
    file (RELATIVE_PATH _relPath "${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
    foreach (_src ${ARGN})
        if (_relPath)
          list (APPEND SRC_TESTS "${_relPath}/${_src}")
        else()
          list (APPEND SRC_TESTS "${_src}")
        endif()
    endforeach()
    if (_relPath)
        set (SRC_TESTS ${SRC_TESTS} PARENT_SCOPE)
    endif()
endmacro()

macro (add_sources)
    file (RELATIVE_PATH _relPath "${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
    foreach (_src ${ARGN})
        if (_relPath)
            list (APPEND SRCS "${_relPath}/${_src}")
        else()
            list (APPEND SRCS "${_src}")
        endif()
    endforeach()
    if (_relPath)
        set (SRCS ${SRCS} PARENT_SCOPE)
    endif()
endmacro()


add_subdirectory (tests)
add_subdirectory (src)

add_executable (simple-cpp-unit ${SRCS})
target_compile_options (simple-cpp-unit PRIVATE -Wall -Werror -ldl)

add_executable (simple-cpp-unit-tests ${SRC_TESTS})
target_compile_options (simple-cpp-unit-tests PRIVATE -Wall -Werror)
