cmake_minimum_required (VERSION 3.13)

project (simple-cpp-unit LANGUAGES CXX)

macro (add_build)
    file (RELATIVE_PATH _relPath "${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
    foreach (_src ${ARGN})
        if (_relPath)
            list (APPEND SRCS "${_relPath}/${_src}")
        else()
            list (APPEND SRCS "${_src}")
        endif()
    endforeach()
    if (_relPath)
        set (SRCS ${SRCS} PARENT_SCOPE)
    endif()
endmacro()

macro (add_execute)
    file (RELATIVE_PATH _relPath "${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
    foreach (_src ${ARGN})
        if (_relPath)
          list (APPEND SRC_EXECUTE "${_relPath}/${_src}")
        else()
          list (APPEND SRC_EXECUTE "${_src}")
        endif()
    endforeach()
    if (_relPath)
      set (SRC_EXECUTE ${SRC_EXECUTE} PARENT_SCOPE)
    endif()
endmacro()

add_subdirectory (src/unit_build)
add_subdirectory (src/unit_execute)
add_subdirectory (src/unit_build/command_line)
add_subdirectory (src/unit_build/macros)
add_subdirectory (src/unit_build/test_method)
add_subdirectory (src/unit_build/test_suite)
add_subdirectory (src/unit_build/utils)
add_subdirectory (src/so_dll_file_execute)

add_executable (unit-build ${SRCS})
add_executable (unit-execute ${SRC_EXECUTE})
target_compile_options (unit-build PRIVATE -Wall -Werror -rdynamic)
target_link_libraries (unit-build ${CMAKE_DL_LIBS})
